SERVER-78848 Return EOF from listSearchIndexes stage when collection doesn't exist

GitOrigin-RevId: d652678a1146126e9b9145e01c2f9639f14d1fc7